trying out graphing the data

--- a/iot-server/public/index.html
+++ b/iot-server/public/index.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sensor Data Visualization</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@2.0.0"></script> <!-- This is necessary for handling time in Chart.js -->
+</head>
+<body>
+  <div class="container">
+    <h1>Sensor Data Visualization</h1>
+    <canvas id="sensorChart"></canvas>
+  </div>
+
+  <script src="app.js"></script>
+</body>
+</html>
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,4 +32,4 @@
     <img src="./js.png" width=100 height=100 alt="">
     <img src="./jssdfsdfds.png" width=100 height=100 alt="">
 </body>
-</html>
+</html> -->
