good looking frontend to a degree

--- a/iot-server/public/index.html
+++ b/iot-server/public/index.html
@@ -24,9 +24,10 @@
                       <button class="remove-button">Remove</button>
                   </div>
               </section>
-              <section class="motion-detected">
+              <section class="device-list">
                   <h2>Device List</h2>
-                  <table class="device-list">
+                  <div class="scrollable-table">
+                    <table>
                       <thead>
                           <tr>
                               <th>Name</th>
@@ -54,8 +55,45 @@
                               <td>Warehouse</td>
                               <td>10:40 AM</td>
                           </tr>
+                          <tr>
+                            <td>Sensor #1</td>
+                            <td>00:1B:44:11:3A:B7</td>
+                            <td>Office</td>
+                            <td>10:30 AM</td>
+                        </tr>
+                        <tr>
+                            <td>Sensor #2</td>
+                            <td>00:1B:44:21:4B:D9</td>
+                            <td>Lobby</td>
+                            <td>8:15 AM</td>
+                        </tr>
+                        <tr>
+                            <td>Sensor #3</td>
+                            <td>00:1B:44:31:5C:FA</td>
+                            <td>Warehouse</td>
+                            <td>10:40 AM</td>
+                        </tr>
+                        <tr>
+                          <td>Sensor #1</td>
+                          <td>00:1B:44:11:3A:B7</td>
+                          <td>Office</td>
+                          <td>10:30 AM</td>
+                      </tr>
+                      <tr>
+                          <td>Sensor #2</td>
+                          <td>00:1B:44:21:4B:D9</td>
+                          <td>Lobby</td>
+                          <td>8:15 AM</td>
+                      </tr>
+                      <tr>
+                          <td>Sensor #3</td>
+                          <td>00:1B:44:31:5C:FA</td>
+                          <td>Warehouse</td>
+                          <td>10:40 AM</td>
+                      </tr>
                       </tbody>
                   </table>
+                </div>
               </section>
           </div>
           <section class="charts">
