--- a/iot-server/public/index.html
+++ b/iot-server/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IoT Sensor Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./app.js"></script>
 </head>
 <body>
     <div class="dashboard-container">
@@ -26,74 +27,22 @@
               </section>
               <section class="device-list">
                   <h2>Device List</h2>
-                  <div class="scrollable-table">
-                    <table>
-                      <thead>
+                    <button id="refresh-button"><img src="./refresh.svg" alt="Refresh" /></button>
+                  <div class="scrollable-table" id="device-list-container">
+                    <!-- <table id="device-table">
+                        <thead>
                           <tr>
-                              <th>Name</th>
-                              <th>MAC Address</th>
-                              <th>Location</th>
-                              <th>Last Active</th>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Location</th>
+                            <th>MAC Address</th>
+                            <th>Last Active</th>
                           </tr>
-                      </thead>
-                      <tbody>
-                          <tr>
-                              <td>Sensor #1</td>
-                              <td>00:1B:44:11:3A:B7</td>
-                              <td>Office</td>
-                              <td>10:30 AM</td>
-                          </tr>
-                          <tr>
-                              <td>Sensor #2</td>
-                              <td>00:1B:44:21:4B:D9</td>
-                              <td>Lobby</td>
-                              <td>8:15 AM</td>
-                          </tr>
-                          <tr class="active-row">
-                              <td>Sensor #3</td>
-                              <td>00:1B:44:31:5C:FA</td>
-                              <td>Warehouse</td>
-                              <td>10:40 AM</td>
-                          </tr>
-                          <tr>
-                            <td>Sensor #1</td>
-                            <td>00:1B:44:11:3A:B7</td>
-                            <td>Office</td>
-                            <td>10:30 AM</td>
-                        </tr>
-                        <tr>
-                            <td>Sensor #2</td>
-                            <td>00:1B:44:21:4B:D9</td>
-                            <td>Lobby</td>
-                            <td>8:15 AM</td>
-                        </tr>
-                        <tr>
-                            <td>Sensor #3</td>
-                            <td>00:1B:44:31:5C:FA</td>
-                            <td>Warehouse</td>
-                            <td>10:40 AM</td>
-                        </tr>
-                        <tr>
-                          <td>Sensor #1</td>
-                          <td>00:1B:44:11:3A:B7</td>
-                          <td>Office</td>
-                          <td>10:30 AM</td>
-                      </tr>
-                      <tr>
-                          <td>Sensor #2</td>
-                          <td>00:1B:44:21:4B:D9</td>
-                          <td>Lobby</td>
-                          <td>8:15 AM</td>
-                      </tr>
-                      <tr>
-                          <td>Sensor #3</td>
-                          <td>00:1B:44:31:5C:FA</td>
-                          <td>Warehouse</td>
-                          <td>10:40 AM</td>
-                      </tr>
-                      </tbody>
-                  </table>
-                </div>
+                        </thead>
+                        <tbody id="device-list-body">
+                        </tbody>
+                      </table> -->
+                  </div>
               </section>
           </div>
           <section class="charts">
@@ -110,6 +59,5 @@
       </main>      
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
