added frontend functions for add, rename and remove

--- a/iot-server/public/index.html
+++ b/iot-server/public/index.html
@@ -20,9 +20,9 @@
                   <input type="text" id="device_name" placeholder="Enter Device Name">
                   <input type="text" id="location" placeholder="Enter Location">
                   <div class="buttons">
-                      <button class="add-button">Add Sensor</button>
-                      <button class="rename-button">Rename</button>
-                      <button class="remove-button">Remove</button>
+                      <button class="add-button" id="add-button">Add Sensor</button>
+                      <button class="rename-button" id="rename-button">Rename</button>
+                      <button class="remove-button" id="remove-button">Remove</button>
                   </div>
               </section>
               <section class="device-list">
